--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     this is a paragraph per allowable elements list found
     https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/structural_roles-->
     <div aria-label="paragraph">
-        <p>Basically, ARIA (Accessible Rich Internet Applications) is a set of roles and attributes that define ways
+        <p>ARIA (Accessible Rich Internet Applications) is a set of roles and attributes that define ways
             to make web content and web applications It works on many websites and applications, especially those
             developed with JavaScript to make it more accessible to people with disabilities.</p>
     </div>
-    <div style="padding-top: 2%;">
+    <div style="padding-top: 6%;">
         <span>Username</span>
         <!--ARIA Labels for Username and Password allows a user with 
         disabilities to utilize a reader that will notify them of the 
